feat: event registration route
